kubernetes/printer/orcaslicer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &appName orcaslicer
  namespace: printer
spec:
  selector:
    app: *appName
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
